force-app/main/default/objects/Master_Importacion__c/fields/Cantidad_de_Valijas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Valijas__c</fullName>
    <label>Cantidad de Valijas</label>
    <summaryForeignKey>Valija__c.Master_Importacion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>