force-app/main/default/objects/Master_Importacion__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Importaciones</relationshipLabel>
    <relationshipName>Master_Importaciones</relationshipName>
    <type>Lookup</type>
</CustomField>