force-app/main/default/objects/Master_Importacion__c/fields/Fecha_Recepcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recepcion__c</fullName>
    <label>Fecha Recepción</label>
    <type>Date</type>
</CustomField>