force-app/main/default/objects/Master_Importacion__c/fields/N_Manifiesto_Aduana__c.field-meta.xml
<CustomField>
    <fullName>N_Manifiesto_Aduana__c</fullName>
    <label>Nº Manifiesto Aduana</label>
    <length>15</length>
    <type>Text</type>
</CustomField>