force-app/main/default/objects/Master_Importacion__c/fields/N_Vuelo__c.field-meta.xml
<CustomField>
    <fullName>N_Vuelo__c</fullName>
    <label>Nº Vuelo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>