force-app/main/default/objects/Master_Importacion__c/fields/Total_Peso__c.field-meta.xml
<CustomField>
    <fullName>Total_Peso__c</fullName>
    <label>Total Peso</label>
    <summarizedField>Detalles_Guias_Importacion__c.Peso__c</summarizedField>
    <summaryForeignKey>Detalles_Guias_Importacion__c.Master_Importacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>