force-app/main/default/objects/Master_Importacion__c/fields/Total_Piezas__c.field-meta.xml
<CustomField>
    <fullName>Total_Piezas__c</fullName>
    <label>Total Piezas</label>
    <summarizedField>Detalles_Guias_Importacion__c.Pieces__c</summarizedField>
    <summaryForeignKey>Detalles_Guias_Importacion__c.Master_Importacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>